# plant-io

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  toolchain-STM32F407.cmake
hw/: CMakeLists.txt  stm32f4_linker.ld
hw/startup/: core_init.c  core_init.h  stm32f4_isr_vector.h  stm32f4_startup.c
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt  sample.cpp
utils/: utils.cmake
